--- a/cucumber-java/resources/META-INF/plugin.xml
+++ b/cucumber-java/resources/META-INF/plugin.xml
@@ -8,9 +8,8 @@
 	<depends>org.consulo.java</depends>
 	<vendor>JetBrains</vendor>
 
-	<extensions defaultExtensionNs="org.consulo.java.platform">
+	<extensions defaultExtensionNs="org.consulo.java">
 		<methodReferencesSearch implementation="org.jetbrains.plugins.cucumber.java.steps.search.CucumberJavaMethodUsageSearcher"/>
-
 	</extensions>
 	<extensions defaultExtensionNs="com.intellij">
 		<errorHandler implementation="com.intellij.diagnostic.ITNReporter"/>
