--- a/cucumber-java/resources/META-INF/plugin.xml
+++ b/cucumber-java/resources/META-INF/plugin.xml
@@ -1,11 +1,12 @@
-<?xml version="1.0" encoding="iso-8859-1"?>
+<?xml version="1.0" encoding="utf-8"?>
 <idea-plugin version="2">
 	<id>org.jetbrains.cucumber.java</id>
 	<name>Cucumber for Java</name>
 	<description>Provides support of Cucumber for Java</description>
-	<version>1.0</version>
+	<version>SNAPSHOT</version>
 	<depends>org.jetbrains.cucumber</depends>
 	<depends>org.consulo.java</depends>
+	<category>Test Frameworks</category>
 	<vendor>JetBrains</vendor>
 
 	<extensions defaultExtensionNs="org.consulo.java">
