--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="iso-8859-1"?>
-
+<?xml version="1.0" encoding="utf-8"?>
 <idea-plugin version="2">
 	<id>org.jetbrains.cucumber</id>
 	<name>Base Cucumber</name>
 	<description>Provides support of Cucumber language</description>
-	<version>1.0</version>
+	<version>SNAPSHOT</version>
 	<vendor>JetBrains</vendor>
+	<category>Test Frameworks</category>
 	<depends optional="true">com.intellij.spellchecker</depends>
 
 	<extensions defaultExtensionNs="com.intellij.spellchecker">
