--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -14,7 +14,7 @@
 
 	<extensions defaultExtensionNs="com.intellij">
 		<fileTypeFactory implementation="org.jetbrains.plugins.cucumber.psi.CucumberFileTypeFactory"/>
-		<lang.syntaxHighlighterFactory key="Gherkin"
+		<lang.syntaxHighlighterFactory language="Gherkin"
 									   implementationClass="org.jetbrains.plugins.cucumber.psi.GherkinSyntaxHighlighterFactory"/>
 
 		<lang.parserDefinition language="Gherkin" implementationClass="org.jetbrains.plugins.cucumber.psi.GherkinParserDefinition"/>
