--- a/cucumber-java/src/main/resources/META-INF/plugin.xml
+++ b/cucumber-java/src/main/resources/META-INF/plugin.xml
@@ -29,10 +29,8 @@
 						 level="WARNING" implementationClass="org.jetbrains.plugins.cucumber.java.inspections.CucumberJavaStepDefClassInDefaultPackageInspection"/>
 	</extensions>
 
-	<extensions defaultExtensionNs="org.jetbrains.plugins.cucumber.steps">
-		<cucumberJvmExtensionPoint implementation="org.jetbrains.plugins.cucumber.java.CucumberJavaExtension"/>
-	</extensions>
-	<extensions defaultExtensionNs="cucumber">
-		<KeywordProvider implementation="org.jetbrains.plugins.cucumber.java.i18n.JavaGherkinKeywordProviderBuilder"/>
+	<extensions defaultExtensionNs="org.jetbrains.cucumber">
+		<steps.cucumberJvmExtensionPoint implementation="org.jetbrains.plugins.cucumber.java.CucumberJavaExtension"/>
+		<keywordProvider implementation="org.jetbrains.plugins.cucumber.java.i18n.JavaGherkinKeywordProviderBuilder"/>
 	</extensions>
 </idea-plugin>
