--- a/cucumber-java/src/main/resources/META-INF/plugin.xml
+++ b/cucumber-java/src/main/resources/META-INF/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<idea-plugin>
+<consulo-plugin>
 	<id>org.jetbrains.cucumber.java</id>
 	<name>Cucumber for Java</name>
 	<description>Provides support of Cucumber for Java</description>
@@ -33,4 +33,4 @@
 		<steps.cucumberJvmExtensionPoint implementation="org.jetbrains.plugins.cucumber.java.CucumberJavaExtension"/>
 		<keywordProvider implementation="org.jetbrains.plugins.cucumber.java.i18n.JavaGherkinKeywordProviderBuilder"/>
 	</extensions>
-</idea-plugin>
+</consulo-plugin>
