--- a/cucumber-groovy/src/main/resources/META-INF/plugin.xml
+++ b/cucumber-groovy/src/main/resources/META-INF/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<consulo-plugin>
+<consulo-plugin url="https://github.com/consulo/consulo-cucumber">
 	<id>org.jetbrains.cucumber.groovy</id>
 	<name>Cucumber for Groovy</name>
 	<description>Provides support of Cucumber for Groovy</description>
