--- a/cucumber-java/src/main/resources/META-INF/plugin.xml
+++ b/cucumber-java/src/main/resources/META-INF/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<consulo-plugin>
+<consulo-plugin url="https://github.com/consulo/consulo-cucumber">
 	<id>org.jetbrains.cucumber.java</id>
 	<name>Cucumber for Java</name>
 	<description>Provides support of Cucumber for Java</description>
