--- a/cucumber-groovy/pom.xml
+++ b/cucumber-groovy/pom.xml
@@ -64,7 +64,7 @@
 
 			<plugin>
 				<groupId>consulo.maven</groupId>
-				<artifactId>consulo-maven-plugin</artifactId>
+				<artifactId>maven-consulo-plugin</artifactId>
 				<version>2-SNAPSHOT</version>
 				<extensions>true</extensions>
 				<configuration>
